--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@createnextapp/react-barcode",
-  "version": "1.1.1",
+  "name": "react-barcodes",
+  "version": "1.0.1",
   "description": "A React component to generate Barcode.",
   "author": "Bunlong <bunlong.van@gmail.com>",
   "license": "MIT",
