--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,25 @@ node_modules
 
 # builds
 build
-# dist
+dist
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 package-lock.json
 
-examples/
+/supports/create-react-app/node_modules
+/supports/create-react-app/package-lock.json
+
+/supports/create-next-app/node_modules
+/supports/create-next-app/.next
+/supports/create-next-app/package-lock.json
