--- a/supports/create-next-app/package.json
+++ b/supports/create-next-app/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "next-barcode": "file:../.."
   },
   "devDependencies": {
     "@types/react": "17.0.22",
