--- a/package.json
+++ b/package.json
@@ -90,9 +90,9 @@
     }
   ],
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react": ">=17.0.0",
+    "react-dom": ">=17.0.0",
+    "react-scripts": ">=4.0.0"
   },
   "dependencies": {
     "jsbarcode": "^3.11.3"
