--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "react-test-renderer": "^18.1.0",
     "rollup": "^2.56.3",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-typescript2": "^0.35.0",
     "ts-jest": "^27.0.5",
     "tslib": "^2.3.1",
     "typescript": "^4.4.2"
@@ -90,9 +90,7 @@
     }
   ],
   "peerDependencies": {
-    "react": ">=17.0.0",
-    "react-dom": ">=17.0.0",
-    "react-scripts": ">=4.0.0"
+    "react": ">=17.0.2"
   },
   "dependencies": {
     "jsbarcode": "^3.11.3"
